# zk-algebra-lab

./: .gitignore  README.md  pyproject.toml
src/zk_algebra/: field.py  interpolation.py  polynomial.py
tests/: test_field.py  test_interpolation.py  test_polynomial.py
